boulder/boulder/tests/compile_fail/hir/fn_simple.bo
# mismatched types
# u16
# u32
# (6:

fn wrong_identity(a: u32) -> u16 {
    a
}